Jataware/data collection interface (#6)
* Bt/jata patch 01 (#1)

* remove prying eyes (clickhouse)

* fix full install bug from original branch

* Added gameCreate to admin actions

* added join game functionality to admin panel

* add user to game by username

* remove username from front end react

* remove username from front end

* waiting room addition

* waiting room bug fix

* removed unused code

* added logoff button

* waiting room style update

* waiting room style update

* waiting room style update

* Deception annotation of incoming/outgoing messages (#4)

* Added api.php feature to support annotation of incoming/outgoing messages for
deception. 

* Annotating incoming messages.

* Adding updates to api in order to return message deception annotation.

* Fixed some lint issues and React warnings, as well as force app to fetch user
games on landing lobby page. If no gameID is specified in URL but user has
joined one, have user redirected to it. We'll poll for this soon.

* Removed a conditional since we're now redirecting to current game.

* Added check to see is part of current game from url. Will leave in for now, but
we probably want to handle this on another area where we display the dialog,
or when we disallow non-admins to expectate games.

* Formatted research dialog a little bit better.

* Changes for Demo (#5)

* Some proposed changes to Lobby.

* Another followup Lobby change proposal.

* Quick responsive container positioning.

* More changes done before demo.

* Cleaning/removing commented out code. Slight changes while demoing from live feedback.

Co-authored-by: Joel Quiles <quilesbaker@gmail.com>

--- a/beta-src/src/assets/css/App.css
+++ b/beta-src/src/assets/css/App.css
@@ -2,6 +2,7 @@
   position: "relative";
 }
 
+
 .no-pointer-events {
   pointer-events: none;
 }
@@ -13,4 +14,8 @@
   opacity: 0;
   transition: opacity 0.5s ease-out;
   pointer-events: none;
+}
+
+#webpack-dev-server-client-overlay {
+  display: none;
 }
