--- a/beta-src/src/assets/css/AdminDashboard.css
+++ b/beta-src/src/assets/css/AdminDashboard.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700&display=swap');
+/* @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700&display=swap'); */
 html, body {
   background-color: #fcfcfc;
   box-sizing: border-box;
   margin: 0;
-  font-family: "Source Sans Pro", sans-serif;
+  /* font-family: "Source Sans Pro", sans-serif; */
   font-style: normal;
   overflowX: hidden;
 }
