--- a/beta-src/src/assets/css/AdminDashboard.scss
+++ b/beta-src/src/assets/css/AdminDashboard.scss
@@ -7,17 +7,17 @@ html, body {
   // font-family: 'Source Sans Pro', sans-serif;
   font-style: normal;
 
-  @media only screen and (max-width: 450px) {
-    font-size: 100%;
-  }
-  @media only screen and (max-width: 700px) {
-    font-size: 95%;
-  }
-  @media only screen and (min-width: 1000px) {
-    font-size: 115%;
-  }
-  @media only screen and (min-width: 1600px) {
-    font-size: 140%;
+  // @media only screen and (max-width: 450px) {
+  //   font-size: 100%;
+  // }
+  // @media only screen and (max-width: 700px) {
+  //   font-size: 95%;
+  // }
+  // @media only screen and (min-width: 1000px) {
+  //   font-size: 115%;
+  // }
+  @media only screen and (min-width: 1400px) {
+    font-size: 120%;
   }
 
   overflowX: hidden;
