--- a/beta-src/src/assets/css/AdminDashboard.scss
+++ b/beta-src/src/assets/css/AdminDashboard.scss
@@ -16,9 +16,9 @@ html, body {
   // @media only screen and (min-width: 1000px) {
   //   font-size: 115%;
   // }
-  @media only screen and (min-width: 1400px) {
-    font-size: 120%;
-  }
+  /* @media only screen and (min-width: 1400px) { */
+  /*   font-size: 120%; */
+  /* } */
 
   overflowX: hidden;
 }
